--- a/index.qmd
+++ b/index.qmd
@@ -5,10 +5,16 @@ author: "SpeedyKom Team"
 date: "February 21, 2026"
 format:
   revealjs:
+    output-file: index.html
     theme: default
     slide-number: true
     transition: slide
     css: styles.css
+
+controls: true
+slide-number: true
+embed-resources: true
+scrollable: false  
 ---
 
 ## Welcome {background-color="#1e3a5f"}
