--- a/index.qmd
+++ b/index.qmd
@@ -6,15 +6,12 @@ date: "February 21, 2026"
 format:
   revealjs:
     output-file: index.html
-    theme: default
+    theme: [default, theme.scss]
     slide-number: true
     transition: slide
-    css: styles.css
-
-controls: true
-slide-number: true
-embed-resources: true
-scrollable: false  
+    controls: true
+    embed-resources: true
+    scrollable: false  
 ---
 
 ## Welcome {background-color="#1e3a5f"}
